<resources>
    <string name="app_name">Paygen</string>
    <string name="action_settings">Settings</string>

    <string name="title_customers">Clientes</string>
    <string name="title_new_customer">Cadastro</string>
    <string name="label_cpf">CPF</string>
    <string name="action_save">Salvar</string>
    <string name="label_first_name">Primeiro nome</string>
    <string name="label_last_name">Último nome</string>
    <string name="label_phone">Telefone</string>
    <string name="waning_empt_name">Campo nome vazio</string>
    <string name="waning_empt_lastname">Campo último nome vazio</string>
    <string name="waning_empt_cpf">Campo CPF vazio</string>
    <string name="waning_empt_phone">Campo telefone vazio</string>
    <string name="label_email">Email</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="ok">Ok</string>
    <string name="error_title">Problemas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_account_activation">Um email de ativação foi enviado para o email
        acima, ative seu cadastro para prosseguir.</string>
    <string name="title_success">Sucesso</string>
    <string name="warning_empty_fields">Parece que alguns campos estão vazios, verifique e tente novamente.</string>
    <string name="card_number">Número do cartão</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cvv">CVV</string>
    <string name="card_holder">Nome no cartão</string>
    <string name="card_expiry_mm">MM</string>
    <string name="card_expiry_aa">AA</string>
    <string name="title_add_credit_card">Novo cartão de crédito.</string>
    <string name="message_payment_method_added">Método de pagamento adicionado com sucesso.</string>
    <string name="title_payment_methods">Meios de pagamento</string>
    <string name="warning_invalid_card">Número do cartão de crédito é inválido.</string>
    <string name="warning_expired_card">Data de expiração inválida.</string>
    <string name="warning_invalid_security_code">Código de segurança inválido.</string>
    <string name="warning_invalid_carrier">Bandeira do cartão inválida</string>
    <string name="title_delete">Excluir</string>
    <string name="message_delete">Deseja excluir o meio de pagamento?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="label_cards">Cartões</string>
    <string name="label_logout">Logout</string>
    <string name="label_estabelecimentos">Estabelecimentos</string>
    <string name="title_sobre">Sobre</string>
    <string name="title_about">Sobre</string>
    <string name="title_open_hours">Horários</string>
    <string name="checkIn">Check-in</string>


    <string name="label_total_consumo">Total consumido:</string>
    <string name="message_you_are_in">Você está em:</string>
    <string name="label_pay">Pagar</string>
    <string name="label_valor_a_pagar">Valor a pagar:</string>
    <string name="message_no_card_registered">Nenhuma forma de pagamento cadastrada, cadastre um cartão de credito para continuar.</string>
    <string name="title_payment">Pagamento</string>
    <string name="label_login">Entrar</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">Email</string>
    <string name="label_sign_up">Cadastre-se</string>
    <string name="label_name">Nome</string>
    <string name="title_change_password">Mudar senha</string>
    <string name="disclaimer_change_password">Informe uma nova senha de acesso</string>
    <string name="label_change">Mudar</string>
    <string name="label_save">Salvar</string>
    <string name="hint_new_password">Nova senha</string>
    <string name="disclaimer_status_pending">Seu cadastro está pendente de ativação, para prosseguir atualize sua senha</string>
    <string name="title_settings">Configurações</string>
    <string name="label_settings">Configurações</string>

    <string name="restaurant">Restaurantes</string>
    <string name="hamburguer">Hamburguerias</string>
    <string name="pizza">Pizzarias</string>
    <string name="title_address">Endereço</string>
    <string name="label_delivery">Delivery</string>
    <string name="title_add_items">Itens</string>
    <string name="error_empty_query">Informe ao menos um parametro de busca</string>
    <string name="title_purchases">Suas compras</string>
    <string name="title_purchase_details">Detalhes da compra</string>
    <string name="label_purchases">Minhas compras</string>
    <string name="action_pay">Pagar</string>
    <string name="title_menu">Cardapio</string>
    <string name="action_add_items">Adiconar itens à comanda</string>
    <string name="disclaimer_checkout">Você não possui nenhum consumo <u> clique aqui para sair</u></string>
    <string name="disclaimer_camera_usage">Para prosseguir precisamos de permissão para acessar sua camera</string>
    <string name="title_picker">Fonte da imagem</string>
    <string name="warning_empty_name">Nome não pode estar vázio</string>
    <string name="warning_no_consumption">Nenhum consumo nesta comanda</string>
    <string name="title_checkout">Checkout</string>
    <string name="message_checkout">Tem certeza que deseja realizar checkout deste estabelecimento?</string>
    <string name="title_edit_profile">Editar seu perfil</string>
    <string name="label_one_day">Último dia</string>
    <string name="label_thirty_days">Últimos 30 dias</string>
    <string name="label_seven_days">Útimos 7 dias</string>
    <string name="label_custom_date">Data customizada</string>
    <string name="disclaimer_location_usage">Para desfrutar de todas os benefícios do app aconselhamos que vocês autorize o usuo da sua localização</string>
    <string name="message_welcome">Bem vindo ao Paygen</string>
    <string name="title_date_filter">Defina um intervalo de data</string>
    <string name="hint_start_date">Data ínicio</string>
    <string name="hint_end_date">Data fim</string>
    <string name="bt_ok">OK</string>
    <string name="warning_invalid_date">Datas inválidas</string>
    <string name="warning_start_end_date">Data ínicio não pode ser menor que a data fim</string>
    <string name="all">Todos</string>

</resources>
