<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_payment_methods"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/label_cards" />
        <item
            android:id="@+id/nav_providers"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/label_estabelecimentos" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/label_logout" />
        </menu>
    </item>

</menu>
