<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context=".activity.ChangePasswordActivity">

    <TextView
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/disclaimer_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/label_save"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/green_400"
        android:text="@string/label_login"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>