<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SalesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </android.support.v7.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/lFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent_40"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:padding="12dp"
                android:text="@string/title_date_filter"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50">

                    <EditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_start_date"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/etEndDate"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".10" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50">


                    <EditText
                        android:id="@+id/etEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_end_date"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/label_save"
                        android:inputType="date"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:text="@string/bt_ok"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</FrameLayout>