<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CheckedInFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimaryLight"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:src="@drawable/image_place_holder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/text_spacing"
                            android:text="@string/message_you_are_in"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvProviderName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:paddingRight="@dimen/text_spacing"
                            android:text="@string/label_total_consumo"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="top"
                            android:textColor="@color/white"
                            android:textSize="27sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            fab:menu_animationDelayPerItem="0"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_colorPressed="@color/teal_600"
            fab:menu_colorRipple="@color/black_transparent_40"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_shadowColor="@color/grey_300">


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payment_white"
                android:padding="8dp"
                fab:fab_label="@string/action_pay"
                fab:fab_colorNormal="@color/red_400"
                fab:fab_colorPressed="@color/red_800"
                fab:fab_colorRipple="@color/black_transparent_40" />

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/fabAddItem"
                android:layout_height="wrap_content"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/action_add_items"
                fab:fab_colorNormal="@color/green_400"
                fab:fab_colorPressed="@color/green_800"
                fab:fab_colorRipple="@color/black_transparent_40" />


        </com.github.clans.fab.FloatingActionMenu>


    </FrameLayout>


</LinearLayout>